# soffit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
assets/: editor-demo.webm
examples/plugins/: docker.sh  docker.toml  pomodoro.sh  system.sh  system.toml  weather.sh  weather.toml
extras/claude-agent/: setup-soffit.md
extras/homebrew/: soffit.rb
src/: cache.rs  colors.rs  config.rs  fmt.rs  http.rs  install.rs  main.rs  marketplace.rs  paths.rs  plugin.rs  presets.rs  render.rs  setup.rs  theme.rs  types.rs  update.rs  widget.rs  widgets.rs
src/edit/: mod.rs  widget_reference.rs
