[package]
name = "soffit"
version = "0.0.6"
edition = "2021"
description = "Customizable statusline manager for Claude Code with desktop editor and custom widget support"
license = "MIT"
repository = "https://github.com/noxcraftdev/soffit"
keywords = ["statusline", "claude-code", "terminal", "widgets", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/noxcraftdev/soffit"
documentation = "https://docs.rs/soffit"
authors = ["Nox Craft"]

[[bin]]
name = "soffit"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:rfd"]
server = ["dioxus/server", "dep:axum", "dep:tokio"]
web = ["dioxus/web"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", optional = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
dioxus = { version = "0.6", features = ["fullstack"] }
libc = "0.2"
regex = "1"
rfd = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"], optional = true }
toml = "0.8"
walkdir = "2"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
